# nreplops-tool

./: .cljstyle  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  NOTES.md  NOTICE  PLAN.md  README.md  TODO.md  deps.edn  rustfmt.toml
.github/workflows/: release.yml
docs/: index.md
examples/: anonfn.clj  fibo.clj  positional-args.clj  positional-args.nrepl  slow-output.clj  testi.nrepl
man/: nr.1.md
notes/: homebrew.md  parsing-clojure.md  parsing-host-expression.md  port-expression.md  prepl.md  pretty-printing.md  ssh-tunnel.md  todo.md
nr/: Cargo.toml
nr-clj-lexer/: Cargo.toml
nr-clj-lexer/src/: clojure.pest  lib.rs
nr-clj-lexing-tester/: Cargo.toml
nr-clj-lexing-tester/input/: simple01.clj  simple03.clj  simple04.clj  simple05.clj  simple06.clj  simple10.clj  simple11.clj
nr-clj-lexing-tester/scripts/: run-tests
nr-clj-lexing-tester/src/: main.rs
nr-dev/: Cargo.toml
nr-dev/input/: simple02.clj  simple06.clj  simple07.clj  simple08.clj  simple09.clj  simple11.clj  simple12.clj  simple13.clj  simple14.clj
nr-dev/scripts/: run-tests
nr/benches/: lexing.rs
nr/src/: cli.rs  error.rs  formatters.rs  hosts_files.rs  lib.rs  outputs.rs  printers.rs  routes.rs  sources.rs  sources_old.rs  style.rs  version.rs
nr/src/clojure/: grammar.pest  lex.rs  mod.rs  pest_grammar.rs  result_ir.rs  token.rs  token_tree.rs
nr/src/clojure/lex_test/: discard_and_meta.rs  keyword.rs  mod.rs
nr/src/conn_expr/: conn_expr.rs  parser.rs
nr/src/pprint/: fragments.rs  layout_solver.rs  mod.rs  pretty_edn.rs  printer.rs  style.rs  unformatted_edn.rs
nr/test/clj/: tests.clj
nr/test/clj/tests/: disconnection.clj  hello.clj
scripts/: build-manual-page  bump-version  gh-make-tarball  gh-project-info  gh-run-version-checks
src/: bencode.rs  cli.rs  error.rs  host_expression.pest  host_expression.rs  host_options.rs  host_resolution.rs  hosts_files.rs  lib.rs  main.rs  nrepl.rs  outputs.rs  routes.rs  socket.rs  sources.rs
src/conn_expr/: addr.rs  conn_expr.rs  grammar.pest  mod.rs  parser.rs  port_set.rs  resolution.rs
src/host_expression/: addr.rs  grammar.pest  mod.rs  parser.rs  pest.rs  port_set.rs
test/clj/: tests.clj
test/clj/tests/: disconnection.clj  hello.clj  util.clj
