[package]
name = "nreplops-tool"
version = "0.0.9"
authors = ["Matti Hänninen <matti@mjhanninen.com>"]
description = "Non-interactive nREPL client for shell scripting and command-line"
keywords = ["nrepl", "repl", "clojure"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/mjhanninen/nreplops-tool"
license = "Apache-2.0"
readme = "README.md"

edition = "2021"

[dependencies]
anyhow = "1.0" # get rid of
clap = { version = "3.1", features = ["derive"] }
dirs = "4"
dns-lookup = "1.0"
is-terminal = "0.2"
pest = "2.1"
pest_derive = "2.1"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_with = { version = "1.13", default_features = false }
thiserror = "1.0"
toml = "0.5"

[[bin]]
name = "nr"
path = "src/bin/main.rs"

[[bin]]
name = "nr-test-conn-expr"
path = "src/bin/test_conn_expr.rs"

[[bin]]
name = "nr-test-hosts-file"
path = "src/bin/test_hosts_file.rs"
